force-app/main/default/objects/Assigned_Task__c/Assigned_Task__c.object-meta.xml
<CustomObject>
    <label>Assigned Trail/Step</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Assigned Trail/Step Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Trails/Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>