force-app/main/default/objects/Assigned_Task__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>