force-app/main/default/objects/Assigned_Task__c/fields/Current_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_Manager__c</fullName>
    <formula>IF( Assign_To__r.ManagerId = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in Trailmaker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>