force-app/main/default/objects/Assigned_Task__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <formula>IF( Assign_To__c =  $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in Explorer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>