force-app/main/default/objects/Assigned_Task__c/fields/Due_Today__c.field-meta.xml
<CustomField>
    <fullName>Due_Today__c</fullName>
    <formula>DATEVALUE( Target_Date_Time__c) == Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Today</label>
    <type>Checkbox</type>
</CustomField>