force-app/main/default/objects/Assigned_Task__c/fields/Energizers__c.field-meta.xml
<CustomField>
    <fullName>Energizers__c</fullName>
    <label>Energizers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>