force-app/main/default/objects/Assigned_Task__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milestone 1</fullName>
            </value>
            <value>
                <fullName>Milestone 2</fullName>
            </value>
            <value>
                <fullName>Milestone 3</fullName>
            </value>
            <value>
                <fullName>Milestone 4</fullName>
            </value>
            <value>
                <fullName>Milestone 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>