force-app/main/default/objects/Assigned_Task__c/fields/Onboarding_Program__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Trail</label>
    <referenceTo>Onboarding_Program__c</referenceTo>
    <relationshipLabel>Assigned Trails/Steps</relationshipLabel>
    <relationshipName>Assigned_Tasks_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>