force-app/main/default/objects/Assigned_Task__c/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <formula>IF( (TEXT(Status__c) == &#39;In-Progress&#39; || TEXT(Status__c) == &#39;New&#39;) &amp;&amp; (Target_Date_Time__c &lt;  NOW()) ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>