force-app/main/default/objects/Assigned_Task__c/fields/Parent_Assigned_Task__c.field-meta.xml
<CustomField>
    <fullName>Parent_Assigned_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Assigned Trail</label>
    <referenceTo>Assigned_Task__c</referenceTo>
    <relationshipLabel>Assigned Trails/Steps</relationshipLabel>
    <relationshipName>Child_Assigned_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>