force-app/main/default/objects/Assigned_Task__c/fields/Percentage_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Completed__c</fullName>
    <label>Percentage Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>