force-app/main/default/objects/Assigned_Task__c/fields/Reason_for_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Reopen__c</fullName>
    <label>Reason for Reopen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>