force-app/main/default/objects/Assigned_Task__c/fields/Target_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Target_Date_Time__c</fullName>
    <label>Target Date Time</label>
    <type>DateTime</type>
</CustomField>