force-app/main/default/objects/Assigned_Task__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Step</label>
    <referenceTo>On_boarding_Task__c</referenceTo>
    <relationshipLabel>Assigned Trails/Steps</relationshipLabel>
    <relationshipName>Assigned_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>