force-app/main/default/objects/Assigned_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assign_To__c</columns>
    <columns>Task__c</columns>
    <columns>Status__c</columns>
    <columns>Target_Date_Time__c</columns>
    <columns>Milestone__c</columns>
    <columns>Onboarding_Program__c</columns>
    <columns>Overdue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assign_To__c</field>
        <operation>equals</operation>
        <value>Apurva Birala</value>
    </filters>
    <label>All</label>
</ListView>