force-app/main/default/objects/Assigned_Task__c/listViews/All_Assigned_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Assigned_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Task__c</columns>
    <columns>Assign_To__c</columns>
    <columns>Status__c</columns>
    <columns>Target_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Task__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Assigned Tasks</label>
</ListView>