force-app/main/default/objects/Assigned_Task__c/listViews/Assigned_Programs.listView-meta.xml
<ListView>
    <fullName>Assigned_Programs</fullName>
    <columns>NAME</columns>
    <columns>Onboarding_Program__c</columns>
    <columns>Assign_To__c</columns>
    <columns>Milestone__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Onboarding_Program__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Assigned Trails</label>
</ListView>